# hyper-fast

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: example_server.rs
examples/config/: log4rs.yml  log4rs_rolling_file.yml  service-default.yml  service-dev.yml
src/: lib.rs  rustfmt.toml
src/server/: commons.rs  error.rs  health_check.rs  http_request.rs  http_response.rs  http_route.rs  http_server.rs  mod.rs  service.rs  settings.rs  utils.rs
src/server/access_logger/: access_logger.rs  mod.rs  response_time.rs
src/server/logger/: access_logger.rs  metrics.rs  metrics_logger.rs  mod.rs  response_time.rs
