[package]
name = "hyper-fast"
version = "0.1.0"
edition = "2021"
description = "Hyper and rust based very fast HTTP Web framework (much faster than actix and other frameworks)."
repository = "https://github.com/hyper-fast/hyper-fast"
license = "Apache-2.0"

[[example]]
name = "example_server"
path = "examples/example_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
metered = "0.9.0"
log = "0.4.17"
anyhow = "1.0.68"
async-trait = "0.1.63"
parking_lot = "0.12.1"
crossbeam = "0.8.2"
crossbeam-epoch = "0.9.13"
crossbeam-skiplist = "0.1.1"
lazy_static = "1.4.0"
prometheus = "0.13.3"
serde = { version = "1.0.152", features = ['derive'] }
libc = "0.2.139"
hdrhistogram = "7.5.2"
async-compression = { version = "0.4.1", features = ["brotli", "deflate", "gzip", "tokio", "futures-io"] }
bytes = "1.3.0"
futures = "0.3.25"
thiserror = "1.0.38"
serde_json = "1.0.91"
humantime-serde = "1.0.1"
humantime = "2.1.0"
chrono = "0.4.23"
tokio-util = { version = "0.7.4", features = ["full"] }
twoway = "0.2.2"
log4rs = { version = "1.0.0", features = ["background_rotation"] }
config = "0.13.3"
