[package]
name = "hyper-fast"
version = "0.3.0"
edition = "2021"
description = "Hyper and rust based very fast HTTP Web framework (much faster than actix and other frameworks)."
repository = "https://github.com/hyper-fast/hyper-fast"
license = "Apache-2.0"

[[example]]
name = "example_server"
path = "examples/example_server.rs"

[features]
response_time = ["humantime", "humantime-serde"]
access_log = ["log4rs", "response_time"]
metrics = ["metered", "crossbeam", "crossbeam-epoch", "crossbeam-skiplist", "parking_lot", "hdrhistogram", "response_time", "prometheus"]
settings = ["parking_lot", "config"]
default = ["response_time", "access_log", "metrics", "settings"]
no-default = []

[dependencies]
http = "0.2.8"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
anyhow = "1.0.68"
async-trait = "0.1.63"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ['derive'] }
libc = "0.2.139"
async-compression = { version = "0.4.1", features = ["brotli", "deflate", "gzip", "tokio", "futures-io"] }
bytes = "1.3.0"
futures = "0.3.25"
thiserror = "1.0.38"
serde_json = "1.0.91"
chrono = "0.4.23"
tokio-util = { version = "0.7.4", features = ["full"] }
twoway = "0.2.2"

# for settings
config = { version = "0.13.3", optional = true }

# for response_time
humantime-serde = { version = "1.0.1", optional = true }
humantime = { version = "2.1.0", optional = true }

# for access_log
log = { version = "0.4.17" }
log4rs = { version = "1.0.0", features = ["background_rotation"], optional = true }

# for metrics
metered = { version = "0.9.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
crossbeam = { version = "0.8.2", optional = true }
crossbeam-epoch = { version = "0.9.13", optional = true }
crossbeam-skiplist = { version = "0.1.1", optional = true }
prometheus = { version = "0.13.3", optional = true }
hdrhistogram = { version = "7.5.2", optional = true }
